# capitaltracker

./: .commitlintrc.js  .czrc  .firebaserc  .gitignore  .gitmoji-changelogrc  .prettierignore  .releaserc.json  .yarnrc  .yarnrc.yml  CHANGELOG.md  Cargo.toml  README.md  commitlint.config.js  firebase.json  nx.json  package.json  project.json  release.config.js  tailwind-workspace-preset.js  tsconfig.base.json
.cargo/: config.toml
.github/: release.yml
.github/workflows/: ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.husky/: commit-msg  post-checkout  post-commit  post-merge  pre-commit  prepare-commit-msg
.storybook/: main.ts  story-loader.js
apps/api/: Cargo.toml  project.json
apps/clients/desktop/: Cargo.toml  project.json  tauri.conf.json
apps/components-e2e/: project.json
apps/desktop/: Cargo.toml  build.rs  project.json  tauri.conf.json
apps/mobile/: package.json  project.json  tsconfig.spec.json
apps/mobile-e2e/: .detoxrc.json
apps/pages-e2e/: project.json
apps/ui-e2e/: project.json
apps/web/: .eslintrc.json  jest.config.ts  project.json  tsconfig.json  tsconfig.server.json
apps/web-e2e/: cypress.config.ts  project.json  tsconfig.json
libs/node-api-models/: README.md  jest.config.ts  package.json  project.json  vite.config.ts
libs/rust-api-models/: Cargo.toml  build.rs  project.json
libs/shared/: jest.config.ts  package.json  project.json  test-setup.ts  tsconfig.json  tsconfig.lib.json
libs/ui/: jest.config.ts  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
libs/utils/: package.json  (+3 more)
(+205 files in other folders)
