[package]
name = "desktop"
default-run = "desktop"
description = "Desktop App for Capital Tracker"
version = "0.0.0"
rust-version = "1.59"
edition = "2021"
authors = ["Clemens Horn"]

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
